--- a/sys-utils/dmesg.1
+++ b/sys-utils/dmesg.1
@@ -46,6 +46,8 @@ will print messages from system daemons only. For all supported facilities see
 output.
 .IP "\fB\-h, \-\-help\fP"
 Print a help text and exit.
+.IP "\fB\-k, \-\-kernel\fP"
+Print kernel messages.
 .IP "\fB\-l, \-\-level \fIlist\fP"
 Restrict output to defined (comma separated) list of levels. For example
 .sp
@@ -90,6 +92,8 @@ to query the kernel ring buffer.  This is 16392 by default.
 at first, 8192 since 1.3.54, 16384 since 2.1.113.)
 If you have set the kernel buffer to be larger than the default
 then this option can be used to view the entire buffer.
+.IP "\fB\-u, \-\-userspace\fP"
+Print userspace messages.
 .IP "\fB\-V, \-\-version\fP"
 Output version information and exit.
 .IP "\fB\-x, \-\-decode\fP"
