--- a/sys-utils/dmesg.1
+++ b/sys-utils/dmesg.1
@@ -92,6 +92,8 @@ to query the kernel ring buffer.  This is 16392 by default.
 at first, 8192 since 1.3.54, 16384 since 2.1.113.)
 If you have set the kernel buffer to be larger than the default
 then this option can be used to view the entire buffer.
+.IP "\fB\-t, \-\-notime\fP"
+Don't print kernel's timestampts.
 .IP "\fB\-u, \-\-userspace\fP"
 Print userspace messages.
 .IP "\fB\-V, \-\-version\fP"
