dmesg: add --show-delta option
Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/sys-utils/dmesg.1
+++ b/sys-utils/dmesg.1
@@ -32,9 +32,11 @@ options are mutually exclusive.
 Clear the ring buffer.
 .IP "\fB\-c, \-\-read-clear\fP"
 Clear the ring buffer contents after printing.
-.IP "\fB\-d, \-\-console-off\fP"
+.IP "\fB\-D, \-\-console-off\fP"
 Disable printing messages to the console.
-.IP "\fB\-e, \-\-console-on\fP"
+.IP "\fB\-d, \-\-show-delta\fP"
+Display the time spent between messages.
+.IP "\fB\-E, \-\-console-on\fP"
 Enable printing messages to the console.
 .IP "\fB\-f, \-\-facility \fIlist\fP"
 Restrict output to defined (comma separated) list of facilities. For example
