--- a/sys-utils/dmesg.1
+++ b/sys-utils/dmesg.1
@@ -94,6 +94,10 @@ to query the kernel ring buffer.  This is 16392 by default.
 at first, 8192 since 1.3.54, 16384 since 2.1.113.)
 If you have set the kernel buffer to be larger than the default
 then this option can be used to view the entire buffer.
+.IP "\fB\-T, \-\-ctime\fP"
+Print human readable timestamps. The timestamp could be inaccurate!
+
+.B The time source used for the logs is not updated after system SUSPEND/RESUME.
 .IP "\fB\-t, \-\-notime\fP"
 Don't print kernel's timestampts.
 .IP "\fB\-u, \-\-userspace\fP"
