dmesg: allow to print time delta without timestamp
Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/sys-utils/dmesg.1
+++ b/sys-utils/dmesg.1
@@ -35,7 +35,8 @@ Clear the ring buffer contents after printing.
 .IP "\fB\-D, \-\-console-off\fP"
 Disable printing messages to the console.
 .IP "\fB\-d, \-\-show-delta\fP"
-Display the time spent between messages.
+Display the timestamp and time delta spent between messages. If used together
+with --notime then only the time delta without the timestamp is printed.
 .IP "\fB\-E, \-\-console-on\fP"
 Enable printing messages to the console.
 .IP "\fB\-f, \-\-facility \fIlist\fP"
