--- a/schedutils/ionice.1
+++ b/schedutils/ionice.1
@@ -1,23 +1,25 @@
-.TH ionice "1" "August 2005" ionice
+.TH IONICE "1" "July 2011" "util-linux" "User Commands"
 .SH NAME
-ionice \- get/set program io scheduling class and priority
+ionice \- sets or gets process I/O scheduling class and priority
 .SH SYNOPSIS
 .B ionice
-.RB [[ \-c
+[[ \fB\-c\fR
 .IR class ]
-.RB [ \-n
-.IR classdata ]
-.RB [ \-t ]]
-.BI \-p \ PID
+.RB [ \fB-n\fR
+.IR level ]
+.RB [ \fB-t\fR ]]
+.BI \fB-p\fR
+PID
 .RI [ PID  ]...
 .br
 .B ionice
-.RB [ \-c
+.RB [ \fB-c\fR
 .IR class ]
-.RB [ \-n
-.IR classdata ]
-.RB [ \-t ]
-.IR COMMAND\  [ ARG  ]...
+.RB [ \fB-n\fR
+.IR level ]
+.RB [ \fB-t\fR ]
+.IR COMMAND
+[ ARG ]...
 .SH DESCRIPTION
 This program sets or gets the io scheduling class and priority for a program.
 If no arguments or just \fB\-p\fR is given, \fBionice\fR will query the current
@@ -55,21 +57,31 @@ some care, as it can starve other processes. As with the best effort class,
 will receive on each scheduling window. This scheduling class is not
 permitted for an ordinary (i.e., non-root) user.
 .SH OPTIONS
-.IP "\fB-c \fIclass\fP"
+.TP
+\fB\-c\fR, \fB\-\-class\fR \fINUM\fR
 The scheduling class. \fI0\fR for none, \fI1\fR for real time, \fI2\fR for
 best-effort, \fI3\fR for idle.
-.IP "\fB-n \fIclassdata\fP"
+.TP
+\fB\-n\fR, \fB\-\-classdata\fR \fINUM\fR
 The scheduling class data. This defines the class data, if the class
 accepts an argument. For real time and best-effort, \fI0-7\fR is valid
 data.
-.IP "\fB-p \fIpid\fP"
+.TP
+\fB\-p\fR, \fB\-\-pid\fR \fIPID\fR
 Pass in process PID(s) to view or change already running processes. If this argument
 is not given, \fBionice\fP will run the listed program with the given
 parameters.
-.IP "\fB-t\fP"
+.TP
+\fB\-t\fR, \fB\-\-ignore\fR
 Ignore failure to set requested priority. If COMMAND or PID(s) is specified, run it
 even in case it was not possible to set desired scheduling priority, what
 can happen due to insufficient privileges or old kernel version.
+.TP
+\fB\-V\fR, \fB\-\-version\fR
+Output version information and exit.
+.TP
+\fB\-h\fR, \fB\-\-help\fR
+Display help and exit.
 .SH EXAMPLES
 .LP
 .TP 7
