--- a/TODO
+++ b/TODO
@@ -1,30 +1,25 @@
 
-lscpu
------
-
-  - add -o <list> to speficy output columns for -p options.
-    (the same thing we use for findmnt, lsblk, ...)
+ Note that items with (!) have high priority.
 
 dmesg
 -----
 
- - add -f (follow) option
+ - add --follow option
    http://www.spinics.net/lists/util-linux-ng/msg04453.html
 
-mount
------
+ - add --color to colorize err and panic messages
 
- (features for new libmount based implemenation)
+libmount (mount/umount)
+-----------------------
 
- - add support for "x-" namespace for mount options. All options with "x-"
-   prefix should be ignored. 
+ Note that the old mount/[u]mount.c code is in MAINTENANCE MODE only. All new
+ features should be implemented to libmount or to the new mount/umount
+ implementation in the libmount/samples/ directory.
 
-   For example x-systemd=, x-upstart-foo, x-libmount-debug=0xffff, ...  
+ - (!!!) add libmount based umount(8) (see libmount/samples/ where is new mount(8) 
+   implementation.
 
-   It's definitely better to have a generic way how ignore some options than
-   use comment= for all things.
-
- - add --source and --target options to specify device and mountpoint
+ - (!) add --source and --target options to specify device and mountpoint
 
      fstab:
         /dev/sda1 /foo	auto	defaults 0 0
@@ -46,10 +41,28 @@ mount
 
    to create a new hierarchy of filesystems at $FOO_ROOT.
 
+ - umount by label:
+	# mount LABEL=mylabel
+	# umount LABEL=mylabel
+
+losetup
+-------
+
+ - (!!!) use new lib/sysfs.c code for losetup(8), the new implementation should
+   be moved to sys-utils/losetup.c.
+
+ - (!!!) add support for LOOP_CTL_ ioctls (probably will be in kernel 3.1 or 3.2)
+
+libblkd and libmountL
+----------------------------
+
+ - use __attribute__((notnull)) and __attribute__((warn_unused_result))
+   Note that the code has to be usefull for non-gcc compilers too.
+
 partx
 -----
 
- - add support loop devices:
+ - (!) add support loop devices:
 
 	partx -a /path/file.img
 
@@ -58,11 +71,26 @@ partx
 
  - support mapping by device-mapper if argv[0] is "kpartx" or --dm option is used.
      
- - add regression tests for partx, addpart and delpart
+ - (!) add regression tests for partx, addpart and delpart
 
+
+docs
+----
+
+ - (!) use something better than gtk-doc for libmount and libblkid (doxyden?)
+
+ - (!) add API documentation to libuuid
+
+ - add Documentation/ directory with:
+	   - man page template 
+	   - usage() HOW-TO
+	   - move README.devel to the Documentation/
 
 build-sys
 --------
+
+ - use non-recursive build-sys, see
+   http://thread.gmane.org/gmane.linux.utilities.util-linux-ng/3297
 
  - we use something like
 
@@ -73,7 +101,7 @@ build-sys
 			build_foo=no
 		fi
 	fi
-	AM_CONDITIONAL(BUILD_LIBMOUNT, test "x$build_foo" = xyes)
+	AM_CONDITIONAL(BUILD_FOO, test "x$build_foo" = xyes)
 
    for Linux-only utils in configure.ac. It would be nice to set all defaults
    for all "$enable_" variables at the begin of the configure script according to
@@ -104,26 +132,6 @@ login-utils:
 
  - use err() and warn() macros rather than fprintf(stderr, ...)
 
-losetup
--------
-
- - don't use ioclts if sysfs supports loop attributes (since 2.6.37,
-   block/loopN/loop/* files)
-
-    - don't open loopdev in looplist_next(), check if /sys/block/loopN/loop
-      exists and returns ll.name rather than file descriptor
-
-    - add sysfs based version of show_loop() and use it for non-root users
-
- - move all loopdev code to libmount
-
-
-shlib (libblkd and libmount):
-----------------------------
-
- - use __attribute__((notnull)) and __attribute__((warn_unused_result))
-   Note that the code has to be usefull for non-gcc compilers too.
-
 libblkid
 --------
 
@@ -135,13 +143,13 @@ libblkid
 
  - add FSSIZE value  -- filesystem size (klibc requirement)
 
- - add support for dasd PT (used for example on s390)
+ - (!) add support for dasd PT (used for example on s390)
 
- - support PARTUUID= tag
+ - (!!!) support PARTUUID= tag
 
    * the partitions probing is already supported by low-level part of the
      library, but it's necessary add support for this tag also to high-level
-     (blkid_cache) API.
+     blkid_cache and blkid_evaluate_* APIs
 
    * add blkid -P <PARTUUID>
 
@@ -152,27 +160,29 @@ wipefs
    one magic string the FS is still detectable by libblkid. We have to inform
    users that there is more valid magic string for the same FS.
 
+ - (!!!) allow to wipe partition tables
+
 fdisk(s)
 --------
 
- * add "move end" command to move end of the last primary/extended partition.
+ - add "move end" command to move end of the last primary/extended partition.
    This feature seems very attractive to users who resizing their disks 
    (for example in virtual machines).
 
- * sfdisk has to use rpmatch() for answers to y/n questions
+ - sfdisk has to use rpmatch() for answers to y/n questions
    (e.g. "Are you satisfied with this? [ynq]")
 
- * sfdisk rounds to cylinders is -uM (megabyte units) is specified, this is
+ - sfdisk rounds to cylinders is -uM (megabyte units) is specified, this is
    pretty stupid feature. It has to round to sectors if -uS or -uM is specified.
 
- * Sun label support is completely useless for large disks, it uses number of
+ - Sun label support is completely useless for large disks, it uses number of
    cylinders from on-disk-label where the geometry is stored by int16 values.
    It seems better to completely ignore this stuff from the label and always
    use geometry + BLKGETSIZE64 from kernel.
 
- * use off_t instead "long long"
+ - use off_t instead "long long"
 
- * catch SIGINT (Ctrl-C) and return to main menu.
+ - catch SIGINT (Ctrl-C) and return to main menu.
    From Red Hat bugzilla #545488:
 
    While using fdisk normally, if you accidentally pressed the wrong button (to
@@ -181,18 +191,18 @@ fdisk(s)
    can't provide a blank or invalid input to get it to break out of the current
    dialog sequence and get back to the main menu.
 
- * fdisk/* refactoring
+ - fdisk/* refactoring (probably implement libfdisk ???)
 
- * add GPT support (probably implement libfdisk)
+ - add GPT support (probably implement libfdisk ???)
 
 misc
 ----
 
- * switch_root:
+ - switch_root:
      - move all mountpoints to the newroot (there are hardcoded /proc /sys and /dev paths now)
      - add --dont-move[=<list of dirs>] options
 
- * use ngettext() for strings with plurals, for example
+ - use ngettext() for strings with plurals, for example
 
     /* include/nls.h */
     #define P_(id, id_plural, n)	ngettext(id, id_plural, n)
@@ -201,27 +211,21 @@ misc
               "%d used sectors", sectors),
               sectors);
 
- * use something better than gtk-doc (doxyden?)
+ - use TZ=UTC and LANG=en_US.UTF-8 for tests
 
- * use TZ=UTC and LANG=en_US.UTF-8 for tests
-
- * add mllockall() and SCHED_FIFO to hwclock,
+ - add mllockall() and SCHED_FIFO to hwclock,
    see http://lkml.org/lkml/2008/10/12/132
  
- * use rpmatch() for all Y/N questions
-
- * umount by label:
-	# mount LABEL=mylabel
-	# umount LABEL=mylabel
+ - use rpmatch() for all Y/N questions
 
 
 ---------------
 exotic requests
 ---------------
 
- * mount -a -- reorder fstab entries by paths before mount (just idea only)
+ - mount -a -- reorder fstab entries by paths before mount (just idea only)
 
- * mount -a  (just idea only)
+ - mount -a  (just idea only)
 
         Date:   Sun, 3 Jun 2007 18:04:24 +0300 (MET DST)
         From: Szabolcs Szakacsits <szaka@sienet.hu>
@@ -256,22 +260,11 @@ exotic requests
 		try to mount all unmounted entries
 	  } while (not all mounted && at least one new was successfully mounted)
 
- * rewrite ipcs to use /proc/sys/kernel rather than unreliable syscalls
+ - rewrite ipcs to use /proc/sys/kernel rather than unreliable syscalls
    (there are problems with 32bit userspace on 64bit kernel)
 
- * minix v3
 
-	From: Matthias Koenig <mkoenig@suse.de>
-	Date:   Tue, 25 Sep 2007 12:00:01 +0200
-
-	It seems that the kernel has support for minix fs v3
-	(though I have not tried it, just inspected some code when
-	trying to find a mkfs.minix issue).
-	It might be worth a thought implementing v3 support
-	(though I am not really sure how much people us minix fs ;-)
-	This might require some major code cleanup in mkfs.minix.
-
- * add SELinux security contexts support to the 'ipcs' utility
+ - add SELinux security contexts support to the 'ipcs' utility
    http://bugzilla.redhat.com/show_bug.cgi?id=225342
 
    Would be great to list the current system IPC Objects with their respective
