--- a/AUTHORS
+++ b/AUTHORS
@@ -59,10 +59,12 @@ CONTRIBUTORS:
       Alexey Gladkov <legion@altlinux.ru>
       Alon Bar-Lev <alon.barlev@gmail.com>
       Américo Wang <xiyou.wangcong@gmail.com>
+      Andrea Galbusera <gizero@gmail.com>
       Andreas Dilger <adilger@sun.com>
       Andrew McGill <list2008@lunch.za.net>
       Andrew Nayenko <resver@gmail.com>
       Andrzej Krzysztofowicz <ankry@mif.pg.gda.pl>
+      Anton V. Boyarshinov <boyarsh@altlinux.org>
       Arif E. Nugroho <arif_endro@yahoo.com>
       Arkadiusz Miskiewicz <arekm@maven.pl>
       Attila Áfra <attila.afra@gmail.com>
@@ -89,6 +91,7 @@ CONTRIBUTORS:
       Daniel Drake <dsd@laptop.org>
       Daniel Mierswa <impulze@impulze.org>
       Daniel Nylander <po@danielnylander.se>
+      Dave Reisner <d@falconindy.com>
       David Brownell <david-b@pacbell.net>
       Davidlohr Bueso <dave@gnu.org>
       David Miller <davem@davemloft.net>
@@ -118,6 +121,7 @@ CONTRIBUTORS:
       Hajime Taira <htaira@redhat.com>
       Hamish Coleman <hamish@zot.org>
       Hayden James <hayden.james@gmail.com>
+      Heiko Carstens <heiko.carstens@de.ibm.com>
       Hendrik Lönngren <wikibugs@googlemail.com>
       Henne Vogelsang <hvogel@opensuse.org>
       H. Peter Anvin <hpa@zytor.com>
@@ -127,20 +131,25 @@ CONTRIBUTORS:
       Jakob Unterwurzacher <jakobunt@gmail.com>
       Jakub Bogusz <qboosh@pld-linux.org>
       James Youngman <jay@gnu.org>
+      Jan Engelhardt <jengelh@medozas.de>
       Jan Kara <jack@suse.cz>
       Jan Sarenik <jsarenik@redhat.com>
       Jason Borden <jborden@bluehost.com>
       Jason Vas Dias <jvdias@redhat.com>
       Jeff Mahoney <jeffm@suse.com>
+      Jens Kristian Søgaard <jens@mermaidconsulting.dk>
       Jeroen Oortwijn <oortwijn@gmail.com>
       Jim Meyering <jim@meyering.net>
       Jim Meyering <meyering@redhat.com>
+      Jindrich Makovicka <makovick@gmail.com>
       Jiro SEKIBA <jir@unicus.jp>
       Joe Hansen <joedalton2@yahoo.dk>
       John Keeping <john.keeping@lineone.net>
+      John Lindgren <john.lindgren@tds.net>
       Jon Grant <jg@jguk.org>
       Jon Ringle <jon@ringle.org>
       Josep Puigdemont <josep.puigdemont@gmail.com>
+      Josiah Worcester <josiahw@gmail.com>
       Justin B Rye <jbr@edlug.org.uk>
       KaiGai Kohei <kaigai@kaigai.gr.jp>
       Kalev Soikonen <ksop@hot.ee>
@@ -148,6 +157,7 @@ CONTRIBUTORS:
       Kees Cook <kees.cook@canonical.com>
       Ken Kopin <kenkopin@gmail.com>
       kevin.granade@gmail.com <kevin.granade@gmail.com>
+      Kirill Elagin <kirelagin@gmail.com>
       Kunihiko IMAI <kimai@iodata.jp>
       LaMont Jones <lamont@debian.org>
       LaMont Jones <lamont@mmjgroup.com>
@@ -160,12 +170,14 @@ CONTRIBUTORS:
       Ludwig Nussel <ludwig.nussel@suse.de>
       Lukas Czerner <lczerner@redhat.com>
       Makoto Kato <makoto.kt@gmail.com>
+      Marc-Antoine Perennou <Marc-Antoine@Perennou.com>
       Marco Colombo <m.colombo@ed.ac.uk>
       Marco d'Itri <md@Linux.IT>
       Marek Otahal <markotahal@gmail.com>
       Marek Polacek <mmpolacek@gmail.com>
       Mark McLoughlin <markmc@redhat.com>
       Markus Rinne <markus.ka.rinne@gmail.com>
+      Martin K. Petersen <martin.petersen@oracle.com>
       Martin Schlemmer <azarah@gentoo.org>
       Martin Schulze <joey@infodrom.org>
       Martin Steigerwald <ms@teamix.de>
@@ -190,11 +202,13 @@ CONTRIBUTORS:
       Milan Broz <mbroz@redhat.com>
       Moritz Muehlenhoff <jmm@inutil.org>
       M.S.Colclough <m.s.colclough@bham.ac.uk>
+      Nick Holloway <Nick.Holloway@pyrites.org.uk>
       Nicolas Provost <nprovost@quadriv.com>
       Nilgün Belma Bugüner <nilgun@buguner.name.tr>
       Norbert Buchmuller <norbi@nix.hu>
       Oliver Falk <oliver@linux-kernel.at>
       Olivier Blin <blino@mandriva.com>
+      Olivier Mengué <dolmen@cpan.org>
       Pádraig Brady <P@draigBrady.com>
       Pascal Terjan <pterjan@mandriva.com>
       Patrice Dumas <pertusus@free.fr>
@@ -208,15 +222,17 @@ CONTRIBUTORS:
       Peter Jones <pjones@redhat.com>
       Peter Tyser <ptyser@xes-inc.com>
       Peter Volkov <pva@gentoo.org>
-      Petr Pisar <petr.pisar@atlas.cz>
+      Petr Písař <petr.pisar@atlas.cz>
       Petr Uzel <petr.uzel@suse.cz>
       Phan Vinh Thinh <teppi82@gmail.com>
       Phillip Susi <psusi@cfl.rr.com>
       Pierre Hauweele <antegallya@gmail.com>
+      Po-Yu Chuang <ratbert@faraday-tech.com>
       Rajeev V. Pillai <rajeevvp@gmail.com>
       Ram Pai <linuxram@us.ibm.com>
       Randy Dunlap <randy.dunlap@oracle.com>
       Ray Wang <wanglei1123@gmail.com>
+      Richard W.M. Jones <rjones@redhat.com>
       Robert Förster <Dessa@gmake.de>
       Robert Millan <rmh@aybabtu.com>
       Rodrigo Stulzer Lopes <rodrigo@conectiva.com.br>
@@ -228,11 +244,13 @@ CONTRIBUTORS:
       Sascha Sommer <ssommer@suse.de>
       Scott James Remnant <scott@ubuntu.com>
       Sebastian Andrzej Siewior <sebastian@breakpoint.cc>
+      Sergey Gusarov <laborer2008@gmail.com>
       Shachar Shemesh <shachar@debian.org>
       Simon Mihevc <simonmihevc@email.si>
       Stefan Krah <stefan@bytereef.org>
       Stepan Kasal <skasal@redhat.com>
       Stephan Maka <stephan@spaceboyz.net>
+      Stephen Hemminger <shemminger@vyatta.com>
       Steve Grubb <sgrubb@redhat.com>
       Sukadev Bhattiprolu <sukadev@linux.vnet.ibm.com>
       Sven Eckelmann <sven.eckelmann@gmx.de>
@@ -242,13 +260,17 @@ CONTRIBUTORS:
       Thorsten Glaser <tg@mirbsd.org>
       Tilman Schmidt <tilman@imap.cc>
       Timo Juhani Lindfors <timo.lindfors@iki.fi>
+      Timo Warns <Warns@Pre-Sense.DE>
       Tobias Klauser <tklauser@distanz.ch>
       Tom Prince <tom.prince@ualberta.net>
       Valerie Aurora <vaurora@redhat.com>
+      Ville Skyttä <ville.skytta@iki.fi>
       Vincent Deffontaines <vincent@gryzor.com>
       Vladimir Brednikov <vbrednikov@gmail.com>
       Volker Schatz <oss@volkerschatz.com>
       Wei-Lun Chao <chaoweilun@gmail.com>
+      Werner Fink <werner@suse.de>
+      WUEBBELS, Josef <Josef.WUEBBELS@mtu.de>
       Yann Droneaud <yann@droneaud.fr>
       Yoshihiro Takahashi <ytakahashi@miraclelinux.com>
       Yu Zhiguo <yuzg@cn.fujitsu.com>
