--- a/TODO
+++ b/TODO
@@ -9,6 +9,11 @@ dmesg
 
  - add --color to colorize err and panic messages
 
+minix (fsck, mkfs)
+------------------
+
+ - clean up types -- use ino_t, size_t and ssize_t
+
 libmount (mount/umount)
 -----------------------
 
