cal: fix manpage formatting
Signed-off-by: Petr Uzel <petr.uzel@suse.cz>

--- a/misc-utils/cal.1
+++ b/misc-utils/cal.1
@@ -35,9 +35,8 @@
 .\"     @(#)cal.1	8.1 (Berkeley) 6/6/93
 .\"
 .TH CAL "1" "June 2011" "util-linux" "User Commands"
-.Sh NAME
-.Nm cal
-.Nd displays a calendar
+.SH NAME
+cal \- displays a calendar
 .SH SYNOPSIS
 .B cal
 [\fIoptions\fR] [[[\fIday\fR] \fImonth\fR] \fIyear\fR]
