look: fix manpage formatting
Signed-off-by: Petr Uzel <petr.uzel@suse.cz>

--- a/misc-utils/look.1
+++ b/misc-utils/look.1
@@ -54,9 +54,9 @@ that
 is invoked with).
 .PP
 If
-.Ar file
+.I file
 is not specified, the file
-.Pa /usr/share/dict/words
+.I /usr/share/dict/words
 is used, only alphanumeric characters are compared and the case of
 alphabetic characters is ignored.
 .SH OPTIONS
