--- a/disk-utils/isosize.8
+++ b/disk-utils/isosize.8
@@ -1,6 +1,6 @@
 .TH ISOSIZE "8" "June 2011" "util-linux" "System Administration Utilities"
 .SH NAME
-isosize \- outputs the length of an iso9660 file system
+isosize \- outputs the length of an iso9660 filesystem
 .SH SYNOPSIS
 .B isosize
 [\fIoptions\fR] \fIiso9660_image_file\fR
@@ -8,28 +8,28 @@ isosize \- outputs the length of an iso9660 file system
 .\" Add any additional description here
 .PP
 This command outputs the length of an iso9660 file system that
-is contained in given file. That file may be a normal file or
-a block device (e.g. /dev/hdd or /dev/sr0). In the absence of
-any switches (or errors) it will output the size of the iso9660
-file system in bytes. This can now be a large number (>> 4 GB).
+is contained in the given file.  That file may be a normal file or
+a block device (e.g. /dev/hdd or /dev/sr0).  In the absence of
+any switches (and errors) it will output the size of the iso9660
+filesystem in bytes.  This can now be a large number (>> 4 GB).
 .SH OPTIONS
 .TP
 \fB\-x\fR, \fB\-\-sectors\fR
-output in humanly readable form the block count and the block
-size. Output uses the term "sectors" for "blocks".
+Show the block count and block size in human-readable form.
+The output uses the term "sectors" for "blocks".
 .TP
 \fB\-d\fR, \fB\-\-divisor\fR=\fINUM\fR
-only has affect when
+Only has an effect when
 .B \-x
-is not given. The number output (if no errors)
+is not given.  The number shown (if no errors)
 is the iso9660 file size in bytes divided by
 .IR NUM .
 So if
 .I NUM
-is the block size then the output number will be the block count.
+is the block size then the shown number will be the block count.
 .PP
-The size of the file (or block device) holding a iso9660 file
-system can be marginally larger than the actual size of the
-iso9660 file system. One reason for this is that cd writers
-are allowed to add "run out" sectors at the end of a iso9660
+The size of the file (or block device) holding an iso9660
+filesystem can be marginally larger than the actual size of the
+iso9660 filesystem.  One reason for this is that cd writers
+are allowed to add "run out" sectors at the end of an iso9660
 image.
