--- a/disk-utils/mkfs.8
+++ b/disk-utils/mkfs.8
@@ -1,24 +1,22 @@
 .\" -*- nroff -*-
-.TH MKFS 8 "Jun 1995" "Version 1.9"
 .TH MKFS "8" "June 2011" "util-linux" "System Administration Utilities"
 .SH NAME
-mkfs \- build a Linux file system
+mkfs \- build a Linux filesystem
 .SH SYNOPSIS
 .SH SYNOPSIS
 .B mkfs
-[\fIoptions\fR] [\fI-t type fs-options\fR] \fIdevice \fR[\fIsize\fR]
+[\fIoptions\fR] [\fB-t\fR \fItype fs-options\fR] \fIdevice\fR [\fIsize\fR]
 .SH DESCRIPTION
 .B mkfs
-is used to build a Linux file system on a device, usually
-a hard disk partition.
-.I filesys
-is either the device name (e.g.
+is used to build a Linux filesystem on a device, usually
+a hard disk partition.  The
+.I device
+argument is either the device name (e.g.
 .IR /dev/hda1 ,
 .IR /dev/sdb2 ),
-or a regular file that shall contain the file system.
-The
+or a regular file that shall contain the filesystem.  The
 .I size
-argument is the number of blocks to be used for the file system.
+argument is the number of blocks to be used for the filesystem.
 .PP
 The exit code returned by
 .B mkfs
@@ -26,10 +24,10 @@ is 0 on success and 1 on failure.
 .PP
 In actuality,
 .B mkfs
-is simply a front-end for the various file system builders
+is simply a front-end for the various filesystem builders
 (\fBmkfs.\fIfstype\fR)
 available under Linux.
-The file system-specific builder is searched for in a number
+The filesystem-specific builder is searched for in a number
 of directories like perhaps
 .IR /sbin ,
 .IR /sbin/fs ,
@@ -43,42 +41,41 @@ and
 .IR /sbin/fs ),
 and finally in the directories
 listed in the PATH environment variable.
-Please see the file system-specific builder manual pages for
+Please see the filesystem-specific builder manual pages for
 further details.
 .SH OPTIONS
 .TP
 \fB\-t\fR, \fB\-\-type\fR=\fITYPE\fR
-Specifies the type of file system to be built.
-If not specified, the default file system type
+Specifies the type of filesystem to be built.
+If not specified, the default filesystem type
 (currently ext2) is used.
 .TP
 .I fs-options
-File system-specific options to be passed to the real file
-system builder.
+Filesystem-specific options to be passed to the real filesystem builder.
 Although not guaranteed, the following options are supported
-by most file system builders.
+by most filesystem builders.
 .TP
 \fB\-V\fR, \fB\-\-verbose\fR
-Produce verbose output, including all file system-specific commands
+Produce verbose output, including all filesystem-specific commands
 that are executed.
 Specifying this option more than once inhibits execution of any
-file system-specific commands.
+filesystem-specific commands.
 This is really only useful for testing.
 .TP
 \fB\-V\fR, \fB\-\-version\fR
-output version information and exit
-\fB\-V\fR will output version information only when it is the
-only parameter.
+Display version information and exit.  Option \fB\-V\fR will display
+version information only when it is the only parameter, otherwise it
+will work as \fB\-\-verbose\fR.
 .TP
 \fB\-h\fR, \fB\-\-help\fR
 Display help and exit.
 .SH BUGS
 All generic options must precede and not be combined with
-file system-specific options.
-Some file system-specific programs do not support the
-.I -V
+filesystem-specific options.
+Some filesystem-specific programs do not support the
+.B -V
 (verbose) option, nor return meaningful exit codes.
-Also, some file system-specific programs do not automatically
+Also, some filesystem-specific programs do not automatically
 detect the device size and require the
 .I blocks
 parameter to be specified.
@@ -90,7 +87,7 @@ Fred N. van Kempen (waltje@uwalt.nl.mugnet.org)
 Ron Sommeling (sommel@sci.kun.nl)
 .br
 The manual page was shamelessly adapted from Remy Card's version
-for the ext2 file system.
+for the ext2 filesystem.
 .SH SEE ALSO
 .BR fs (5),
 .BR badblocks (8),
