agetty: pass hostname to login(1)
Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/term-utils/agetty.8
+++ b/term-utils/agetty.8
@@ -97,6 +97,10 @@ option is added to the login command line.
 Don't reset terminal cflags (control modes). See \fItermios(3)\fP for more
 details.
 .TP
+\-E, \-\-remote
+If \-H \fIfakehost\fP option is given then \-r \fIfakehost\fP options is
+added to the the \fB/bin/login\fP command line.
+.TP
 \-f, \-\-issue\-file \fIissue_file\fP
 Display the contents of \fIissue_file\fP instead of \fI/etc/issue\fP.
 This allows custom messages to be displayed on different terminals.
