sfdisk: correct '--inside-order' to '--inside-outer' in documentation
Signed-off-by: Benno Schulenberg <bensberg@justemail.net>

--- a/fdisk/sfdisk.8
+++ b/fdisk/sfdisk.8
@@ -322,10 +322,10 @@ Caution, see warning section. To be documented.
 .B \-\-not\-in\-order
 Caution, see warning section. To be documented.
 .TP
-.B \-\-inside\-order
+.B \-\-inside\-outer
 Caution, see warning section. Chaining order.
 .TP
-.B \-\-not\-inside\-order
+.B \-\-not\-inside\-outer
 Caution, see warning section. Chaining order.
 .TP
 .B \-\-nested
